# DesenvolvendoSuaPrimeiraAPIcomFastAPIPythonEDocker

./: .gitignore  .pre-commit-config.yaml  LEIA-ME.txt  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
src/: database.py  main.py
src/controllers/: controllers.py  product.py
src/schemas/: product.py
src/usecases/: product.py
src/utils/: exceptions.py  utils.py
tests/: conftest.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
