[tool.poetry]
name = "tdd project"
version = "0.0.1"
description = ""
authors = ["Eduardo da Silva Ferreira <eduardo.s.fereira@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]
[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
motor = "^3.3.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pre-commit = "^3.5.0"
httpx = "^0.25.1"
autopep8 = "^2.3.2"
bandit = "^1.8.3"
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.1"
mypy = "^1.15.0"
pylint = "^3.3.6"

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
